--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,5 +1,6 @@
 $dark-periwinkle: #6e7fd8;
 $dark-sky-blue: #4a90e2;
+$pale-grey: #f8f8fb;
 $pale-magenta: #d56fa1;
 $warm-grey: #979797;
 $common-grey: #919191;
