--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,34 @@
     max-width: 45%;
     height: auto; }
 
+.footer-gradient, .footer {
+  background: #4a90e2;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#4a90e2, #6e7fd8);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#4a90e2, #6e7fd8);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#4a90e2, #6e7fd8);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#4a90e2, #6e7fd8);
+  /* Standard syntax */ }
+
+.footer {
+  padding: 40px 0; }
+  .footer .footer-logo-container {
+    margin-bottom: 30px; }
+  .footer .title {
+    color: white;
+    font-family: Lato;
+    font-style: italic;
+    font-weight: lighter; }
+  .footer .links {
+    color: white;
+    font-family: Lato;
+    font-size: 20px; }
+    .footer .links.transparent {
+      opacity: 0.6; }
+
 .how-to-section {
   margin: 10px 0; }
   .how-to-section.grey {
