--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -8,7 +8,7 @@
 
 .footer {
   @extend .footer-gradient;
-  padding: 40px 0;
+  padding: 40px 10px;
   .footer-logo-container {
     margin-bottom: 30px;
   }
