--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,8 @@
 .header {
   padding: 80px 0;
   margin-bottom: 40px; }
+  .header .logo {
+    margin-bottom: 20px; }
   .header .title {
     margin-top: 0;
     font-family: Lato;
@@ -50,7 +52,7 @@
   /* Standard syntax */ }
 
 .footer {
-  padding: 40px 0; }
+  padding: 40px 10px; }
   .footer .footer-logo-container {
     margin-bottom: 30px; }
   .footer .title {
