--- a/sass/header.scss
+++ b/sass/header.scss
@@ -10,6 +10,9 @@
   @extend .header-gradient;
   padding: 80px 0;
   margin-bottom: 40px;
+  .logo {
+    margin-bottom: 20px;
+  }
   .title{
     margin-top: 0;
     font-family: Lato;
