--- a/sass/header.scss
+++ b/sass/header.scss
@@ -8,6 +8,7 @@
 
 .header {
   @extend .header-gradient;
+  border-radius: 0 0 50% 50% / 40px;
   padding: 80px 0;
   margin-bottom: 40px;
   .logo {
@@ -29,5 +30,11 @@
   .store-button {
     max-width: 45%;
     height: auto;
+  }
+}
+
+@media (max-width: $screen-xs-max) {
+  .header{
+    border-radius: 0;
   }
 }
