--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -4,3 +4,6 @@ $pale-grey: #f8f8fb;
 $pale-magenta: #d56fa1;
 $warm-grey: #979797;
 $common-grey: #919191;
+
+$screen-sm-min: 768px;
+$screen-xs-max: $screen-sm-min - 1;
