--- a/css/custom.css
+++ b/css/custom.css
@@ -66,12 +66,14 @@
     font-family: Lato;
     font-style: italic;
     font-weight: lighter; }
-  .footer .links {
-    color: white;
-    font-family: Lato;
-    font-size: 20px; }
-    .footer .links.transparent {
-      opacity: 0.6; }
+  .footer .link-container {
+    margin-bottom: 20px; }
+    .footer .link-container .links {
+      color: white;
+      font-family: Lato;
+      font-size: 20px; }
+      .footer .link-container .links.transparent {
+        opacity: 0.6; }
   .footer .copyright {
     margin-top: 20px;
     color: white;
