--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -19,13 +19,16 @@
     font-style: italic;
     font-weight: lighter;
   }
-  .links {
-    &.transparent {
-      opacity: 0.6;
+  .link-container {
+    margin-bottom: 20px;
+    .links {
+      &.transparent {
+        opacity: 0.6;
+      }
+      color: white;
+      font-family: Lato;
+      font-size: 20px;
     }
-    color: white;
-    font-family: Lato;
-    font-size: 20px;
   }
   .copyright {
     margin-top: 20px;
