--- a/css/custom.css
+++ b/css/custom.css
@@ -20,10 +20,10 @@
   /* Standard syntax */ }
 
 .header {
-  padding: 80px 0;
+  padding: 40px 0;
   margin-bottom: 40px; }
   .header .logo {
-    margin-bottom: 20px; }
+    margin: 40px 0; }
   .header .title {
     margin-top: 0;
     font-family: Lato;
