--- a/sass/header.scss
+++ b/sass/header.scss
@@ -8,10 +8,10 @@
 
 .header {
   @extend .header-gradient;
-  padding: 80px 0;
+  padding: 40px 0;
   margin-bottom: 40px;
   .logo {
-    margin-bottom: 20px;
+    margin: 40px 0;
   }
   .title{
     margin-top: 0;
