--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.section-text {
+  margin-top: 35%;
+}
+
 .title {
   font-family: Lato;
   font-weight: 100;
@@ -32,4 +36,10 @@
 
 .how-to-image {
   max-width: 100%;
+}
+
+@media (max-width: $screen-xs-max) {
+  .section-text {
+    margin-top: 0;
+  }
 }
