updates about page title margin

--- a/css/custom.css
+++ b/css/custom.css
@@ -96,7 +96,7 @@
     background-color: #f8f8fb; }
 
 #about .text-section {
-  margin-top: 5%;
+  margin-top: 30px;
   margin-bottom: 100px; }
 
 .how-to-section {
